--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,12 @@
+# syntax=docker/dockerfile:1.7
+
 # ---- Build Stage ----
-FROM golang:1.26-alpine AS builder
+ARG BUILDPLATFORM
+FROM --platform=$BUILDPLATFORM golang:1.26-alpine AS builder
+
+ARG TARGETOS
+ARG TARGETARCH
+ARG TARGETVARIANT
 
 RUN apk add --no-cache git ca-certificates tzdata
 
@@ -8,7 +15,13 @@ COPY go.mod go.sum ./
 RUN go mod download
 
 COPY . .
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
+RUN set -eux; \
+    GOOS="${TARGETOS:-linux}"; \
+    GOARCH="${TARGETARCH:-amd64}"; \
+    if [ "$GOARCH" = "arm" ] && [ -n "${TARGETVARIANT}" ]; then \
+        GOARM="${TARGETVARIANT#v}"; \
+    fi; \
+    CGO_ENABLED=0 GOOS="$GOOS" GOARCH="$GOARCH" ${GOARM:+GOARM=$GOARM} \
     go build -ldflags="-s -w" -o /picobot ./cmd/picobot
 
 # ---- Runtime Stage ----
